--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,9 @@
             <li>
               <a href="/login">Login</a>
             </li>
+            <li>
+              <a href="/logout">Logout</a>
+            </li>
           </ul>
         </div>
       </nav>
