Add button/links to gain access to albums and photos

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,10 @@
               <a href="/login">Login</a>
             </li>
             <li>
-              <a href="/logout">Logout</a>
+              <a href="/albums">Albums</a>
+            </li>
+            <li>
+              <a href="/photos">Photos</a>
             </li>
           </ul>
         </div>
