Add buttons to albums view

--- a/views/albums.html
+++ b/views/albums.html
@@ -8,6 +8,12 @@
             <li class="active">
               <a href="/">Home</a>
             </li>
+            <li class="active">
+              <a href="/albums">Albums</a>
+            </li>
+            <li class="active">
+              <a href="/photos">Photos</a>
+            </li>
           </ul>
         </div>
       </nav>
