--- a/views/photos.html
+++ b/views/photos.html
@@ -14,6 +14,9 @@
             <li class="active">
               <a href="/photos">Photos</a>
             </li>
+            <li class="active">
+              <a href="/logout">Logout</a>
+            </li>
           </ul>
         </div>
       </nav>
