--- a/views/photos.html
+++ b/views/photos.html
@@ -17,6 +17,9 @@
             <li class="active">
               <a href="/logout">Logout</a>
             </li>
+            <li class="inactive">
+              <a href="/login">Login</a>
+            </li>
           </ul>
         </div>
       </nav>
