Add button to create new album in view

--- a/views/photos.html
+++ b/views/photos.html
@@ -11,6 +11,9 @@
             <li class="active">
               <a href="/albums">Albums</a>
             </li>
+            <li class="active">
+              <a href="/albums/new">New Album</a>
+            </li>
           </ul>
         </div>
       </nav>
