--- a/views/photos.html
+++ b/views/photos.html
@@ -12,7 +12,7 @@
               <a href="/albums">Albums</a>
             </li>
             <li class="active">
-              <a href="/albums/new">New Album</a>
+              <a href="/albums/new">Create New Album</a>
             </li>
           </ul>
         </div>
