Update path in album view

--- a/views/albums.html
+++ b/views/albums.html
@@ -15,7 +15,7 @@
               <a href="/photos">Photos</a>
             </li>
             <li class="active">
-              <a href="/photos/new">Create a New Photo</a>
+              <a href="/albums/new">Create a New Album</a>
             </li>
           </ul>
         </div>
