--- a/views/albums.html
+++ b/views/albums.html
@@ -18,7 +18,7 @@
         </div>
       </nav>
       <div class="jumbotron"  style="padding:40px;">
-        <h1>Hello, this is albums page!</h1>
+        <h1>Hello, this is the albums page!</h1>
       </div>
     </div>
   </body>
