--- a/views/albums.html
+++ b/views/albums.html
@@ -14,6 +14,9 @@
             <li class="active">
               <a href="/albums/new">Create a New Album</a>
             </li>
+            <li class="active">
+              <a href="/logout">Logout</a>
+            </li>
           </ul>
         </div>
       </nav>
