--- a/views/albums.html
+++ b/views/albums.html
@@ -21,7 +21,7 @@
         </div>
       </nav>
       <div class="jumbotron"  style="padding:40px;">
-        <h1>Hello, this is the albums page!</h1>
+        <h1>This is the albums page!</h1>
       </div>
     </div>
   </body>
