Fix grammar on new album view

--- a/views/new_album.html
+++ b/views/new_album.html
@@ -21,7 +21,7 @@
         </div>
       </nav>
       <div class="jumbotron"  style="padding:40px;">
-        <h1>This is new album page!</h1>
+        <h1>This is the new album page!</h1>
       </div>
     </div>
   </body>
