--- a/views/new_album.html
+++ b/views/new_album.html
@@ -12,7 +12,7 @@
               <a href="/albums">Albums</a>
             </li>
             <li class="active">
-              <a href="/photos/new">Add New album</a>
+              <a href="/photos/new">Add New Album</a>
             </li>
             <li class="active">
               <a href="/logout">Logout</a>
