Fix path in new photo view

--- a/views/photos.html
+++ b/views/photos.html
@@ -12,6 +12,9 @@
               <a href="/albums">Albums</a>
             </li>
             <li class="active">
+              <a href="/photos">photos</a>
+            </li>
+            <li class="active">
               <a href="/photos/new">Add New Photo</a>
             </li>
             <li class="active">
