--- a/views/photos.html
+++ b/views/photos.html
@@ -19,6 +19,7 @@
             </li>
             <li class="active">
               <a href="/logout">Logout</a>
+              <a href="/login">Login</a>
             </li>
           </ul>
         </div>
