--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,9 @@
               <a href="/">Home</a>
             </li>
             <li>
+              <a href="/logout">Logout</a>
+            </li>
+            <li>
               <a href="/login">Login</a>
             </li>
             <li>
