--- a/views/new_album.html
+++ b/views/new_album.html
@@ -16,6 +16,7 @@
             </li>
             <li class="active">
               <a href="/logout">Logout</a>
+              <a href="/login">Login</a>
             </li>
           </ul>
         </div>
